--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <div class="container">
       <h1>shecodes</h1>
+      <h1>shecodes</h1>
       <form id="sign-up">
         <div class="row">
           <div class="col-6">
