--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       <p class="footer">
         This project is designed by <span>fadahunsi oluwabukola</span>
       </p>
+      <a href="https://github.com/Bukifad/form">github</a>
     </div>
     <!-- <script src="src/index.js"></script> -->
     <script>
